--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.3.1",
     "react-native": "0.76.8",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-permissions": "^5.3.0"
+    "react-native-permissions": "^5.3.0",
+    "expo-location": "~18.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
