--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.76.8",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-permissions": "^5.3.0",
-    "expo-location": "~18.0.10"
+    "expo-location": "~18.0.10",
+    "expo-linear-gradient": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
